# agent_oxide

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
bins/loomis/: Cargo.toml
bins/loomis/prompts/: system.md
bins/loomis/src/: app.rs  lib.rs  main.rs
bins/loomis/src/hooks/: mod.rs  observability_hook.rs  response_router.rs  sandbox_hook.rs  skill_hook.rs  system_prompt_hook.rs  todo_hook.rs
bins/loomis/src/sandbox/: resource_tracker.rs
bins/loomis/src/tools/: ask_user_question.rs  calculator.rs  echo.rs  edit.rs  mod.rs  skill_tool.rs  todo.rs  tool_edit.rs  tool_glob.rs  tool_grep.rs  tool_ls.rs  (+4 more)
docs/: developer-guide.md
libs/deepseek/src/: client.rs  request.rs
libs/engine/src/: agent.rs  builder.rs  context.rs  hooks.rs  lib.rs  response_router.rs
libs/hooks/: Cargo.toml
libs/hooks/src/: compact.rs  lib.rs
libs/memory/src/: lib.rs  memory.rs  persistence.rs
libs/observability/: Cargo.toml
libs/observability/src/: event.rs  hook.rs  lib.rs  store.rs  subagent.rs
libs/skills/: Cargo.toml
libs/skills/src/: lib.rs
libs/subagent/: Cargo.toml
libs/subagent/src/: config.rs  filter.rs  lib.rs  tool.rs
libs/tools/: Cargo.toml
libs/tools-macros/src/: lib.rs
libs/tools/src/: lib.rs  progress.rs  registry.rs  tool.rs
src/: lib.rs  main.rs
src/core/: agent.rs  mod.rs
src/core/client/: error.rs  mod.rs  request.rs  stream.rs
src/memory/: mod.rs
src/persistence/: mod.rs
src/tools/: calculator.rs  fs.rs  tool_glob.rs  tool_grep.rs  tool_ls.rs  tool_shell.rs
src/tui/: app.rs  event.rs  markdown.rs  mod.rs  ui.rs
(+8 files in other folders)
