[package]
name = "subagent"
version = "0.1.0"
edition = "2024"
description = "Subagent as Tool — spawn autonomous sub-agents for complex sub-tasks"

[dependencies]
provider = { path = "../provider" }
tools = { path = "../tools" }
engine = { path = "../engine" }
memory = { path = "../memory" }
observability = { path = "../observability" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
schemars = { workspace = true }
